--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/bootstrap": "^5.0.5",
+    "@types/express-validator": "^3.0.0",
+    "@types/prop-types": "^15.7.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta2",
+    "express-validator": "^6.9.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-avatar": "^3.9.7",
     "react-dom": "^17.0.1",
+    "react-dropdown-select": "^4.7.3",
+    "react-hook-form": "^6.15.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
